Update heading when form is submitted

--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@
           Change Heading 2
   </button>
 
-  <form onsubmit="return ChangeHeading3(event);">
-  Custom Heading:<br>
+  <form id="flickForm">
   <input type = "text" id="textBox" name="heading"><br>
-  <input type = "submit" value = "Submit">
+  <button type = "submit">Update Heading</button>
   </form>
  
   <script src="index.js"></script>
