Updating to classroom work (Day 2)

--- a/index.html
+++ b/index.html
@@ -10,21 +10,18 @@
 <body>
   <h1>Chrismess</h1>
 
-  <h1 class="fire">
-      Dragon
-  </h1>
-
-  <button>Change Heading 1</button>
-
-  <button class = "dragon">
-          Change Heading 2
-  </button>
-
   <form id="flickForm">
-  <input type = "text" id="textBox" name="heading"><br>
+  <input 
+     type = "text" 
+     name="flickName" 
+     autofocus
+     placeholder = "Enter a flick"
+  >
   <button type = "submit">Update Heading</button>
   </form>
  
+  <ul id ="flicks"></ul>
+
   <script src="index.js"></script>
 </body>
 </html>
