Add a second field to the form and display its value in the list (HW 2)

--- a/index.html
+++ b/index.html
@@ -13,11 +13,16 @@
   <form id="flickForm">
   <input 
      type = "text" 
-     name="flickName" 
+     name="flickName1" 
      autofocus
      placeholder = "Enter a flick"
   >
-  <button type = "submit">Update Heading</button>
+  <input 
+     type = "text" 
+     name="flickName2" 
+     placeholder = "Enter another flick"
+  >
+  <button type = "submit">Add to list</button>
   </form>
  
   <ul id ="flicks"></ul>
