Display second field in separate HTML element

--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
   <button type = "submit">Add to list</button>
   </form>
  
-  <ul id ="flicks"></ul>
-
+  <div id ="flicks1"></div>
+  <div id ="flicks2"></div>
+  
   <script src="index.js"></script>
 </body>
 </html>
